infra/k8s/auth-micro-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-micro-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-micro
  template:
    metadata:
      labels:
        app: auth-micro
    spec:
      containers:
        - name: auth-micro
          image: aaronpazm/auth-micro
