infra/k8s/products-micro-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-micro-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products-micro
  template:
    metadata:
      labels:
        app: products-micro
    spec:
      containers:
        - name: products-micro
          image: aaronpazm/products-micro
