infra/k8s/auth-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
spec:
  selector:
    app: auth-micro
  ports:
    - name: auth-micro
      protocol: TCP
      port: 3000
      targetPort: 3000
