infra/k8s/products-mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-srv
spec:
  selector:
    app: products-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
