infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional config options
    kubernetes.io/ingress.class: nginx # tell kubernetes we want an ingress controller based on nginx-ingress project
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-cluster-ip-service
                port:
                  number: 3000
